<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="resources_script">Latn</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="status_theme">Status.im Theme</string>
    <string name="notification_sync_init">Initializing service</string>
    <string name="notification_sync_in_progress">Synchronising…</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="title_activity_keys_backup_setup">Key Backup</string>
    <string name="title_activity_keys_backup_restore">Use Key Backup</string>
    <string name="title_activity_verify_device">Verify device</string>
    <string name="keys_backup_is_not_finished_please_wait">Keys backup is not finished, please wait…</string>
    <string name="sign_out_bottom_sheet_warning_no_backup">You’ll lose your encrypted messages if you sign out now</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">Key backup in progress. If you sign out now you’ll lose access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_warning_backup_not_active">Secure Key Backup should be active on all of your devices to avoid losing access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_dont_want_secure_messages">I don’t want my encrypted messages</string>
    <string name="sign_out_bottom_sheet_backing_up_keys">Backing up keys…</string>
    <string name="keys_backup_activate">Use Key Backup</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="backup">Back up</string>
    <string name="sign_out_bottom_sheet_will_lose_secure_messages">You’ll lose access to your encrypted messages unless you back up your keys before signing out.</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="send">Send</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Remove</string>
    <string name="quote">Quote</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="speak">Speak</string>
    <string name="clear">Clear</string>
    <string name="later">Later</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="none">None</string>
    <string name="revoke">Revoke</string>
    <string name="disconnect">Disconnect</string>
    <string name="report_content">Report content</string>
    <string name="active_call">Active call</string>
    <string name="ongoing_conference_call">Ongoing conference call.\nJoin as %1$s or %2$s</string>
    <string name="ongoing_conference_call_voice">Voice</string>
    <string name="ongoing_conference_call_video">Video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing…</string>
    <string name="missing_permissions_error">"Due to missing permissions, this action is not possible.</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this room</string>
    <string name="missing_permissions_title_to_start_conf_call">Cannot start call</string>
    <string name="device_information">Device information</string>
    <string name="room_no_conference_call_in_encrypted_rooms">Conference calls are not supported in encrypted rooms</string>
    <string name="call_anyway">Call Anyway</string>
    <string name="send_anyway">Send Anyway</string>
    <string name="or">or</string>
    <string name="invite">Invite</string>
    <string name="offline">Offline</string>
    <string name="accept">Accept</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="abort">Abort</string>
    <string name="ignore">Ignore</string>
    <string name="review">Review</string>
    <string name="decline">Decline</string>
    <string name="action_exit">Exit</string>
    <string name="actions">Actions</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation_simple">Are you sure you want to sign out?</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_global_search">Global search</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_historical">Historical</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_mark_room_read">Mark as read</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="disable">Disable</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_error">Error</string>
    <string name="bottom_action_home">Home</string>
    <string name="bottom_action_call_history">Call</string>
    <string name="bottom_action_favourites">Favourites</string>
    <string name="bottom_action_people">People</string>
    <string name="bottom_action_rooms">Rooms</string>
    <string name="bottom_action_groups">Communities</string>
    <string name="home_filter_placeholder_home">Filter room names</string>
    <string name="home_filter_placeholder_favorites">Filter favourites</string>
    <string name="home_filter_placeholder_people">Filter people</string>
    <string name="home_filter_placeholder_rooms">Filter room names</string>
    <string name="home_filter_placeholder_groups">Filter community names</string>
    <string name="invitations_header">Invites</string>
    <string name="low_priority_header">Low priority</string>
    <string name="system_alerts_header">"System Alerts"</string>
    <string name="direct_chats_header">Conversations</string>
    <string name="local_address_book_header">Local address book</string>
    <string name="user_directory_header">User Directory</string>
    <string name="matrix_only_filter">Matrix contacts only</string>
    <string name="matrix_contact">Matrix Contact</string>
    <string name="no_conversation_placeholder">No conversations</string>
    <string name="no_contact_access_placeholder">You didn’t allow Riot to access your local contacts</string>
    <string name="no_result_placeholder">No results</string>
    <string name="people_no_identity_server">No identity server configured.</string>
    <string name="rooms_header">Rooms</string>
    <string name="rooms_directory_header">Room directory</string>
    <string name="no_room_placeholder">No rooms</string>
    <string name="no_public_room_placeholder">No public rooms available</string>
    <plurals name="public_room_nb_users">
        <item quantity="one">1 user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="groups_invite_header">Invite</string>
    <string name="groups_header">Communities</string>
    <string name="no_group_placeholder">No groups</string>
    <string name="send_bug_report_include_logs">Send logs</string>
    <string name="send_bug_report_include_crash_logs">Send crash logs</string>
    <string name="send_bug_report_include_screenshot">Send screenshot</string>
    <string name="send_bug_report">Report bug</string>
    <string name="send_bug_report_description">Please describe the bug. What did you do? What did you expect to happen? What actually happened?</string>
    <string name="send_bug_report_description_in_english">If possible, please write the description in English.</string>
    <string name="send_bug_report_placeholder">Describe your problem here</string>
    <string name="send_bug_report_logs_description">In order to diagnose problems, logs from this client will be sent with this bug report. This bug report, including the logs and the screenshot, will not be publicly visible. If you would prefer to only send the text above, please untick:</string>
    <string name="send_bug_report_alert_message">You seem to be shaking the phone in frustration. Would you like to open the bug report screen?</string>
    <string name="send_bug_report_app_crashed">The application has crashed last time. Would you like to open the crash report screen?</string>
    <string name="send_bug_report_rage_shake">Rage shake to report bug</string>
    <string name="send_bug_report_sent">The bug report has been successfully sent</string>
    <string name="send_bug_report_failed">The bug report failed to be sent (%s)</string>
    <string name="send_bug_report_progress">Progress (%s%%)</string>
    <string name="send_files_in">Send into</string>
    <string name="read_receipt">Read</string>
    <string name="join_room">Join Room</string>
    <string name="room_event_action_cancel_upload">Cancel Upload</string>
    <string name="room_event_action_cancel_download">Cancel Download</string>
    <string name="encryption_export_room_keys">Export room keys</string>
    <string name="passphrase_create_passphrase">Create passphrase</string>
    <string name="passphrase_confirm_passphrase">Confirm passphrase</string>
    <string name="contacts">Contacts</string>
    <string name="invite_content">You have been invited you to this room, join to chat?</string>
    <string name="encryption_export_room_keys_message_content">This process allows you to export the key for messages you have received in encrypted room to local file. You will then be able to import the file to another Matrix client in the future, so that client will be also be able to decrypt these messages. The exported file will allow anyone who can read it to decrypt any encrypted messages that you can see, so you should be careful to keep it secure.</string>
    <string name="export">Export</string>
    <string name="title">Title</string>
    <string name="share_or_save">Share or Save</string>
    <string name="save_to_file">Save to file</string>
    <string name="send_logs">Send logs</string>
    <string name="label_share_app">ShareApp</string>
    <string name="label_feed_back">Feedback</string>
    <string name="label_notification">Notifications</string>
    <string name="label_calls">Calls</string>
    <string name="label_report">Report</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="label_deactivate_account">Deactivate account</string>
    <string name="label_settings">Settings</string>
</resources>