<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_settings"
    app:startDestination="@+id/profileSettingsFragment">

    <fragment
        android:id="@+id/deactivateAccountFragment"
        android:name="vmodev.clearkeep.fragments.DeactivateAccountFragment"
        android:label="@string/label_deactivate_account"
        tools:layout="@layout/fragment_deactivate_user_account">
        <action
            android:id="@+id/cancel"
            app:destination="@id/profileSettingsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="vmodev.clearkeep.fragments.PrivacyPolicyFragment"
        android:label="@string/label_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy">
        <argument
            android:name="url"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="vmodev.clearkeep.fragments.ReportFragment"
        android:label="@string/label_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/callSettingsFragment"
        android:name="vmodev.clearkeep.fragments.CallSettingsFragment"
        android:label="@string/label_calls"
        tools:layout="@layout/fragment_call_settings" />
    <fragment
        android:id="@+id/notificationSettingsFragment"
        android:name="vmodev.clearkeep.fragments.NotificationSettingsFragment"
        android:label="@string/label_notification"
        tools:layout="@layout/fragment_notification_settings" />
    <fragment
        android:id="@+id/feedBackFragment"
        android:name="vmodev.clearkeep.fragments.FeedBackFragment"
        android:label="@string/label_feed_back"
        tools:layout="@layout/fragment_feed_back" />
    <fragment
        android:id="@+id/settingDoNotDisturbFragment"
        android:name="vmodev.clearkeep.fragments.SettingDoNotDisturbFragment"
        android:label="@string/do_not_disturb"
        tools:layout="@layout/fragment_setting_do_not_disturd" />
    <fragment
        android:id="@+id/shareAppFragment"
        android:name="vmodev.clearkeep.fragments.ShareAppFragment"
        android:label="@string/label_share_app"
        tools:layout="@layout/fragment_share_app">
        <action
            android:id="@+id/next_action"
            app:destination="@id/profileSettingsFragment"
            app:popUpTo="@id/shareAppFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/profileSettingsFragment"
        android:name="vmodev.clearkeep.fragments.ProfileSettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_profile_settings">
        <action
            android:id="@+id/notifications"
            app:destination="@id/notificationSettingsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/calls"
            app:destination="@id/callSettingsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/report"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/privacyPolicy"
            app:destination="@id/privacyPolicyFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/deactivateAccount"
            app:destination="@id/deactivateAccountFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />

        <action
            android:id="@+id/feedBack"
            app:destination="@id/feedBackFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/shareApp"
            app:destination="@id/shareAppFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/no_anim" />

        <action
            android:id="@+id/settingDoNotDisturb"
            app:destination="@id/settingDoNotDisturbFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />

    </fragment>
</navigation>