<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.arch.lifecycle.LiveData" />

        <import type="vmodev.clearkeep.viewmodelobjects.Resource" />

        <import type="vmodev.clearkeep.viewmodelobjects.Status" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_radius_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_or_save"
            android:textSize="@dimen/text_20_sp"
            android:layout_margin="10dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_share_black_24dp"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/share"
                android:textSize="@dimen/text_20_sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_save_to_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_save_black_24dp"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/save_to_file"
                android:textSize="@dimen/text_20_sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/copy"
                android:textSize="@dimen/text_20_sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:text="@string/cancel"
            android:textColor="@color/app_green"
            android:textSize="@dimen/text_20_sp"/>
    </LinearLayout>

</layout>